--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "deploy": "ng deploy --no-silent --name='Yendric' --email='yendricvanroey@gmail.com'",
+    "deploy": "ng deploy --no-silent --name='Yendric' --email='yendricvanroey@gmail.com' --cname=lichtbeheer.yendric.be",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
